# sensante

./: .gitignore  README.md  exploration.py  pyproject.toml  requirements.txt
api/: main.py
frontend/: index.html
notebooks/: exploration.py  test_groq.py  train_model.py
